[+] Added Subway Surfers: Barcelona, Beijing, Buenos Aires, Havana, Houston,
Iceland, London, Mexico, Miami, Monaco, New Orleans, San Francisco (this was
the one already on No Name Games), Saint Petersburg, Winter Holiday, and
Zurich
[+] Added Five Nights at Freddy's: Sister Location
[+] Added Five Nights at Freddy's: Ultimate Custom Night (Thanks for the 
suggestion Mm)

12/13/2025:
[+] Added The Deadseat (Thanks for the suggestion Muffet<3)
[+] Added Geometry Dash Lite
[+] Added Flappy Bird (Thanks for the suggestion 127)
[+] Added Papa's Taco Mia (Thanks for the suggestion melody)
[+] Added Binding of Issac: Wrath of the Lamb (Thanks for the suggestion
Tyce, Nanderlous and Q)
[+] Added A Koopa's Revenge 2 (Thanks for the suggestion Tyce)
[+] Fixed the A.I assistant "failed to fetch" (Thanks for the bug report)
[+] Added DOOM (The original) (Thanks for the suggestion ZeWurdo)
[+] Added the [DOS EMULATED] tag to DOS emulated games aswell as putting
them in the emulated section, because they are technically emulated.
[+] Added Wolfenstein 3D

12/12/2025:
[+] Added Zombotron 1-3 (Thanks for the suggestion "Timmy and Malik")

12/10/2025:
[!] If you can, join the official No Name Games Discord server! 
Invite link: https://discord.gg/EsGryf3exm (you may need to join on your 
personal device). If this doesn't get many members I might delete this.
[+] Added 1v1.lol (Added this on my own, but thanks to Tortacracker67 for 
the suggestion)
[+] Added Metroid II: Return of Samus (Thanks for the suggestion)
[+] Added Mortal Kombat: Deadly Alliance (Thanks for the suggestion colin
is a silly fella)

12/9/2025:
[+] Fixed Papa's Cupcakeria opening Papa's Cheeseria (Thanks for the bug 
report ilovenonamegamesitisveryfunandihaveagreatimeplayingitwheneverigetbor-
ediplayitinclassandimnolongerboredthatishowfunthiswebsiteit) [Calm down with
the glaze there, holy]
[+] Added Warfare 1917 (Thanks for the suggestion IluvNoNameGamesJamesA)