@@ -29,6 +29,8 @@ Zurich
 [+] Added Five Nights at Freddy's: Sister Location
 [+] Added Five Nights at Freddy's: Ultimate Custom Night (Thanks for the 
 suggestion Mm)
+[+] Added FNAF World (Labeled Five Nights at Freddy's World)
+[+] Added Freddy Fazbear's Pizzeria Simulator
 
 12/13/2025:
 [+] Added The Deadseat (Thanks for the suggestion Muffet<3)
